Added disk stats related metrics
Signed-off-by: Stevan Buzejic <buzejic.stevan@gmail.com>